syntax = "proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "auth/pkg/auth_v1;auth_v1";

enum Role {
  UNKNOWN = 0;
  USER = 1;
  ADMIN = 2; 
}

service UserV1 {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateUser {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  Role role = 5;
  
}

message CreateUserRequest {
  CreateUser user = 1;
  }

message CreateUserResponse {
  int64 id = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUser {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  Role role = 4;
  
}

message UpdateUserRequest {
  UpdateUser user = 1;
} 

message DeleteUserRequest {
  int64 id = 1;
}
